sana_derive/tests/ui/fail-05-variants-with-fields.rs
use sana_derive::Sana;

#[derive(Clone, Copy, Sana)]
enum Token {
    #[token("token")]
    WithFields(i32),

    #[error]
    Error,
}

fn main() { }
